--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+
+spring.datasource.username=postgres
+spring.datasource.password=cms@project
+
+spring.datasource.driverClassName=org.postgresql.Driver
+
+server.error.include-message=always
+server.error.include-binding-errors=always
