--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cms_project
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-
-spring.datasource.username=postgres
-spring.datasource.password=cms@project
-
-spring.datasource.driverClassName=org.postgresql.Driver
+#Informações do banco de dados expostas apenas para fins educativo
+## NÃO FAÇA ISSO NO SEU AMBIENTE!! ##
+spring.datasource.username=root
+spring.datasource.password=123456
+#####################################
 
 server.error.include-message=always
 server.error.include-binding-errors=always
